--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "@ethersproject/bytes": "^5.0.0"
   }
 }
